--- a/myproject/static files/style.css
+++ b/myproject/static files/style.css
@@ -1,7 +1,9 @@
 Body {
-    background-color: blue;
+    background-color: rgb(52, 52, 64);
     
 }
 h2{
-    color: yellow;
+    color: rgb(255, 111, 0);
+    text-align: center;
+   
 }
